Add dashboard route and dashboard html

--- a/web/js/shared/footer/footer.html
+++ b/web/js/shared/footer/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <style>
-    body { padding-bottom: 70px; }
+    body { padding-bottom: 70px; background: transparent; color: white; }
   </style>
   <nav class="navbar navbar-default navbar-fixed-bottom" 
         role="navigation" style="background-color:#fff;">
