Modifications to statement controller and styles
Changed the statement controller to automatially fill in the subject
from the standard.

Fixed some styles

--- a/app/assets/javascripts/admin/admin.html
+++ b/app/assets/javascripts/admin/admin.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-4 col-xs-4">
+  <div class="col-md-4">
     <div data-ng-if="standards.length < 1" class="message">
       <span> There are no standards to show </span>
     </div>
@@ -43,5 +43,5 @@
     </prox-widget>
     -->
   </div>
-  <div ui-view class="col-lg-8 col-sm-8 col-xs-8"> </div>
+  <div ui-view class="col-md-8"> </div>
 </div>
