--- a/app/assets/javascripts/admin/standards/statements/add_statement.html
+++ b/app/assets/javascripts/admin/standards/statements/add_statement.html
@@ -12,7 +12,7 @@
  
    <div class="form-group" data-ng-class="{'has-error': form.subject.$invalid && form.subject.$dirty, 'has-success': !form.subject.$invalid}">
       <label for="subject" class="sr-only"> Subject </label>
-      <input type="text" name="subject" class="form-control" data-ng-model="edu.statement.subject" placeholder="Subject" />
+      <input type="text" name="subject" class="form-control" data-ng-model="edu.statement.subject" placeholder="Subject" disabled/>
    </div>
    
    <div class="form-group">
