--- a/app/assets/javascripts/admin/standards/statements/statements.html
+++ b/app/assets/javascripts/admin/standards/statements/statements.html
@@ -6,12 +6,12 @@
     <div class="col-md-8" style="padding-top:10px">
       <!-- filters and search -->
       <div class="col-md-6">
-        <select class="form-control">
-          <option value="0"> -- Filter by Grade Level -- </option>
-        </select>
+        <!-- <select class="form-control" data-ng-model="gradeLevel.levels" data-ng-options="level.description for level in edlevels">
+          <option value=""> -- Filter by Grade Level -- </option>
+          </select> -->
       </div>
       <div class="input-group col-md-4">
-          <input type="text" class="form-control" placeholder="Search...">
+          <input type="text" class="form-control" placeholder="Search..." data-ng-model="searchText" >
           <span class="input-group-addon"><i class="fa fa-search"></i></span>
       </div>
     </div>
@@ -22,19 +22,27 @@
   <div class="row info">
     <div class="col-md-12">
       <div class="table-responsive">
-        <table class="table table-hover table-striped">
+        <table class="table table-hover table-striped table-condensed">
           <thead>
             <tr>
               <th> Notation </th>
               <th> Description </th>
+              <th> Grade Level(s) </th>
               <th> </th>
             </tr>
           </thead>
           <tbody>
-            <tr data-ng-repeat="statement in statements">
-              <td> {{statement.notation }}</td>
-              <td> {{statement.description }} </td>
-              <td> <button class="btn btn-sm btn-info btn-circle"><i class="fa fa-edit"></i></button></td>
+            <tr data-ng-repeat="statement in statements | filter: searchText | filter: gradeLevel">
+              <td> {{statement.statement.notation }}</td>
+              <td> {{statement.statement.description }} </td>
+              <td> 
+                <ul>
+                  <li data-ng-repeat="level in statement.levels">
+                    {{level.description}}
+                  </li>
+                </ul> 
+              </td>
+              <td style="vertical-align:middle;"> <button class="btn btn-sm btn-info btn-circle"><i class="fa fa-edit"></i></button></td>
             </tr>
           </tbody>
         </table>
