--- a/app/assets/javascripts/admin/admin.html
+++ b/app/assets/javascripts/admin/admin.html
@@ -1,5 +1,6 @@
 <div class="row" ng-if="!state.current.data.hideAdmin">
-  {{state.current.data.hideAdmin}}
   <a ui-sref="admin.standards"> Manage Standards </a>
+  <a ui-sref="admin.questions"> Manage Questions </a>
 </div>
 <div ui-view class="row col-md-12"> </div>
+<toaster-container> </toaster-container>
