--- a/app/assets/javascripts/admin/standards/standards.html
+++ b/app/assets/javascripts/admin/standards/standards.html
@@ -3,7 +3,6 @@
       <span> There are no standards to show </span>
     </div>
    
-
     <div class="list-group" ng-if="standards.length > 0">
       <a href="#" class="list-group-item active" data-ng-repeat="s in standards" ui-sref-active="active" ui-sref="admin.standards({id:s.id})">
         {{s.title}} 
@@ -12,7 +11,7 @@
 </div>
 
 <div class="col-md-9" ng-show="standard != null">
-    <div class="overlay standard_details" ng-show="!hideStandards"> 
+    <div class="overlay standard_details" ng-show="!state.current.data.hideStandards"> 
     <h4> Description <i data-ng-class="{'fa-caret-right': isDescriptionCollapsed, 'fa-caret-down': !isDescriptionCollapsed}" 
                         class="fa" ng-click="isDescriptionCollapsed = !isDescriptionCollapsed"></i> </h4>
     <p collapse="isDescriptionCollapsed"> {{standard.description}} </p>
@@ -22,9 +21,7 @@
     <p collapse="isEducationCollapsed"> 
       <span data-ng-repeat="level in educationLevels"> {{level.description}} <span data-ng-if="!$last"> | </span>  </span>
     </p>
-
-    <h4> hide Standards - {{hideStandards}} </h4>
-    <a class="btn btn-primary" ui-sref="admin.standards.statements({id:standard.id})">GO </a>
+    <a class="btn btn-primary" ui-sref="admin.standards.statements({id:standard.id})">Show Statements </a>
   </div>
   <div class="statements" ui-view> </div ui-view>
 </div>
