--- a/app/assets/javascripts/admin/questions/edit_question.html
+++ b/app/assets/javascripts/admin/questions/edit_question.html
@@ -1,6 +1,6 @@
 <div class="row col-md-12" >
   <div class="col-md-4">
-    <div class="thumbnail" question-picture style="height:400px;"> </div>
+    <div class="thumbnail" question-picture> </div>
     <button class="btn btn-primary"> Change Picture </button>
   </div>
   <div class="col-md-8">
