--- a/app/assets/javascripts/admin/questions/questions.html
+++ b/app/assets/javascripts/admin/questions/questions.html
@@ -1,43 +1,39 @@
-<section ng-if="!state.current.data.hideQuestions">
-<div class="row col-md-12 toolbar" > 
-  <div class="col-md-2" style="padding-top:10px"> 
-    <button class="btn btn-sm btn-success btn-circle" ng-click="addQuestion()"><i class="fa fa-plus"></i></button>
-  </div>
+<!-- <section ng-if="!state.current.data.hideQuestions"> -->
+<section class="content-page col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-class="{'fade': state.current.data.hideQuestions}">
+  
+  <div class="row top">
+    <div class="col-lg-12">
+      <div class="widget">
+        <div class="widget-header">
+          <i class="fa fa-question"></i> Questions
+          <button class="btn btn-sm btn-success" style="margin: 0px 10px" ng-click="addQuestion()"> 
+            Add a Question 
+          </button>
+          <input type="text" placeholder="Search" class="form-control input-sm pull-right" data-ng-model="searchText"/>
+          <div class="clearfix"> </div>
+        </div>
+        
+        <div class="widget-body no-padding large">
+          <question-details> </question-details> 
+        </div>
+        
+        <div class="widget-footer">
+          <nav style="text-align:center">
+            <ul class="pagination">
+              <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+            </ul>
+          </nav>
+        <div>
 
-  <div class="input-group col-md-4 " style="padding-top:8px">
-    <input type="text" class="form-control" placeholder="Search..." data-ng-model="searchText" >
-    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+      </div>
+    </div>
   </div>
-</div>
-  <!-- <div ui-grid="gridOptions" class="question-table"></div> -->
-<div class="table-responsive row">
-  <table class="table table-hover table-striped table-condensed">
-    <thead>
-      <tr>
-        <th> Question Text </th>
-        <th> Picture </th>
-        <th> Statements </th>
-        <th> </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr data-ng-repeat="question in questions" >
-        <td> {{question.text}} </td>
-        <td> <img src="data:image/png;base64,{{question.picture}}" style="width:100px; height:100px"> </td>
-        <td> 
-          <ul>
-            <li data-ng-repeat="statement in question.statements">
-              {{ statement.description }}
-            </li>
-          </ul>
-        </td> 
-        <td style="vertical-align:middle">
-          <a ui-sref="admin.questions.edit({questionId:question.id})" class="btn btn-sm btn-info btn-circle"> <i class="fa fa-edit"></i></a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
 </section>
-<div ui-view> </div>
+<div ui-view class="content-page level-1" ng-if="state.current.data.hideQuestions"> </div>
 <toaster> </toaster>
