ADded directive to handle subpages

--- a/app/assets/javascripts/admin/admin.html
+++ b/app/assets/javascripts/admin/admin.html
@@ -1,8 +1,15 @@
-<div class="row top" ng-if="!state.current.data.hideAdmin">
-  <ul>
-    <li> <a ui-sref="admin.standards"> Manage Standards </a> </li>
-    <li> <a ui-sref="admin.questions"> Manage Questions </a> </li>
-  </ul>
-</div>
-<div ui-view class="row content-page col-md-12" style="width:98%" > </div>
+<inner-page inner-page-width="75%">
+  
+  <inner-page-element id="admin-submenu">
+    <div ui-view class="row col-md-12"> </div>
+  </inner-page-element>
+
+  <div class="row" ng-class="{'fade': state.current.data.hideAdmin}">
+  <!-- <div class="row">  -->
+    <ul>
+      <li> <a ui-sref="admin.standards" open-inner-page="admin-submenu"> Manage Standards </a> </li>
+      <li> <a ui-sref="admin.questions" open-inner-page="admin-submenu"> Manage Questions </a> </li>
+    </ul>
+  </div>
+</inner-page> 
 <toaster-container> </toaster-container>
