--- a/app/assets/javascripts/admin/questions/questions.html
+++ b/app/assets/javascripts/admin/questions/questions.html
@@ -1,5 +1,5 @@
 <!-- <section ng-if="!state.current.data.hideQuestions"> -->
-<section class="content-page col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-class="{'fade': state.current.data.hideQuestions}">
+<section class="col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-if="!state.current.data.hideQuestions">
   
   <div class="row top">
     <div class="col-lg-12">
@@ -35,5 +35,5 @@
     </div>
   </div>
 </section>
-<div ui-view class="content-page level-1" ng-if="state.current.data.hideQuestions"> </div>
+<div ui-view  ng-if="state.current.data.hideQuestions"> </div>
 <toaster> </toaster>
