--- a/app/assets/javascripts/children/children.html
+++ b/app/assets/javascripts/children/children.html
@@ -1,36 +1,44 @@
-<section class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content-page" ng-class="{'fade': state.param.id}">
+<inner-page inner-page-width="85%" item-id="state.params.id">
   
-  <div class="row top">
-    <div class="col-md-6 col-sm-6 col-xs-6">
-      <div class="widget">
-        <div class="widget-header">
-          <i class="fa fa-child"></i> Your Registered Children
-          <button class="btn btn-sm btn-success" style="margin: 0px 10px" ng-click="createChild()">
-            <i class="fa fa-plus"></i>
-          </button>
-        </div>
-        <div class="widget-body no-padding large">
+  <inner-page-element id="child-view">
+    <div ui-view class="row col-md-12"></div>
+  </inner-page-element>
+
+  <section inner-page-parent > 
+    <div class="row" ng-controller="ChildrenCtrl as childCtrl">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="widget">
+          <div class="widget-header">
+            <i class="fa fa-child"></i> Your Registered Children
+            <button class="btn btn-sm btn-success" style="margin: 0px 10px" ng-click="childCtrl.createChild()">
+              <i class="fa fa-plus"></i> Add Child
+            </button>
+          </div>
+          <div class="widget-body no-padding large">
+            <div class="list-group">
+              <a class="list-group-item" ng-repeat="c in childCtrl.children" ui-sref-active="active" ui-sref="children.view({id:c.id})" open-inner-page="child-view">
+                <p class-"list-group-item-text">
+                  <div class="col-md-12">
+                    <div class="col-md-2">
+                      <div child-picture child="c" style="width:100px;height:100px;"></div>           
+                    </div>
+                    <div class="col-md-8">
+                      <h4> {{c.firstName}} {{c.lastName}} </h4>
+                    </div>
+                    <div class="col-md-2">
+                    </div>
+                  </div>
+                  <span class="clearfix"></span>
+                </p>
+              </a>
+            </div>
+          </div>
+          <div class="widget-footer">
             
+          </div>
         </div>
       </div>
-    </div>
-  </div> 
-
-  <div class="col-md-3"> 
-    <div class="row" style="padding-bottom: 10px" >
-      <button class="btn btn-success btn-circle" data-ng-click="createChild()"><i class="fa fa-plus"></i></button> 
-    </div>
-    <div data-ng-if="children.length < 1" class="message">
-      <span> You have not added your children yet </span>
-    </div>
-   
-    <div class="list-group" ng-if="children.length > 0">
-      <a href="#" class="list-group-item active" data-ng-repeat="c in children" ui-sref-active="active" ui-sref="children.view({id:c.id})">
-        {{c.firstName}} 
-      </a>
-    </div>
-  </div>
-</section>
-
-<section ui-view class="view-child col-lg-12 content-page level-1" ng-if="state.param.id"> </section>
+    </div> 
+  </section>
+</inner-page>
 <toaster> </toaster>
