--- a/app/assets/javascripts/admin/admin.html
+++ b/app/assets/javascripts/admin/admin.html
@@ -1,15 +1,11 @@
-<inner-page inner-page-width="75%">
-  
-  <inner-page-element id="admin-submenu">
-    <div ui-view class="row col-md-12"> </div>
-  </inner-page-element>
+<section class="row" ng-if="!state.current.data.hideAdmin">
+  <ul>
+    <li> <a ui-sref="admin.standards" > Manage Standards </a> </li>
+    <li> <a ui-sref="admin.questions" > Manage Questions </a> </li>
+  </ul>
+</section>
 
-  <section inner-page-parent class="row">
-  <!-- <div class="row">  -->
-    <ul>
-      <li> <a ui-sref="admin.standards" open-inner-page="admin-submenu"> Manage Standards </a> </li>
-      <li> <a ui-sref="admin.questions" open-inner-page="admin-submenu"> Manage Questions </a> </li>
-    </ul>
-  </section>
-</inner-page> 
+
+<div ui-view class="row col-md-12"> </div>
+ 
 <toaster-container> </toaster-container>
