--- a/app/assets/javascripts/admin/questions/questions.html
+++ b/app/assets/javascripts/admin/questions/questions.html
@@ -1,6 +1,5 @@
 <!-- <section ng-if="!state.current.data.hideQuestions"> -->
-<section class="col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-if="!state.current.data.hideQuestions">  
- 
+<section class="col-lg-12 col-sm-12 col-xs-12 col-md-12" ng-if="!state.current.data.hideQuestions" ng-init="init()">   
    <div class="row top">
     <div class="col-lg-12">
       <div class="widget">
