--- a/app/assets/javascripts/admin/questions/edit/edit_question.html
+++ b/app/assets/javascripts/admin/questions/edit/edit_question.html
@@ -1,6 +1,6 @@
 <div class="row top col-md-12" ng-init="init()">
   <div class="col-md-4">
-    <div class="thumbnail" > </div>
+    <div class="thumbnail" question-picture picture-padding="75%"> </div>
     <button class="btn btn-primary"> Change Picture </button>
   </div>
   <div class="col-md-8">
